// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-38 MuiBox-root-39"
>
  <div
    className="MuiBox-root-38 MuiBox-root-40"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-65"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-61"
  >
    <button
      className="MuiButtonBase-root-58 MuiButtonBase-disabled-59 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-disabled-53"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-62"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedSecondary-51"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-65"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-63"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-text-43 MuiButton-textPrimary-44"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-65"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-64"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-fullWidth-57"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-65"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-1 MuiBox-root-2"
  >
    <div
      className="MuiBox-root-1 MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-24"
    >
      <button
        className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-25"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-26"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Back
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-27"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-28"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-271 MuiFormControl-marginNormal-272 MuiTextField-root-270"
  >
    <label
      className="MuiFormLabel-root-287 MuiInputLabel-root-275 MuiInputLabel-formControl-281 MuiInputLabel-animated-284 MuiInputLabel-shrink-283"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-307 MuiOutlinedInput-root-294 MuiInputBase-formControl-308"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-324 MuiOutlinedInput-notchedOutline-301"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-325"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-317 MuiOutlinedInput-input-302"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-343 MuiButtonBase-disabled-344 MuiButton-root-326 MuiButton-contained-334 MuiButton-containedPrimary-335 MuiButton-disabled-338"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-327"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components /forms TextField 1`] = `
<div
  className="MuiBox-root-346 MuiBox-root-347"
>
  <div
    className="MuiBox-root-346 MuiBox-root-348"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-350 MuiFormControl-marginNormal-351 MuiTextField-root-349"
      >
        <label
          className="MuiFormLabel-root-366 MuiFormLabel-error-369 MuiInputLabel-error-357 MuiInputLabel-root-354 MuiInputLabel-formControl-360 MuiInputLabel-animated-363 MuiInputLabel-shrink-362"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-386 MuiOutlinedInput-root-373 MuiInputBase-error-392 MuiOutlinedInput-error-378 MuiInputBase-formControl-387"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-403 MuiOutlinedInput-notchedOutline-380"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-404"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-396 MuiOutlinedInput-input-381"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-405 MuiFormHelperText-contained-409 MuiFormHelperText-error-406"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-346 MuiBox-root-413"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-350 MuiFormControl-marginNormal-351 MuiTextField-root-349"
      >
        <label
          className="MuiFormLabel-root-366 MuiInputLabel-root-354 MuiInputLabel-formControl-360 MuiInputLabel-animated-363 MuiInputLabel-shrink-362"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-386 MuiOutlinedInput-root-373 MuiInputBase-formControl-387"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-403 MuiOutlinedInput-notchedOutline-380"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-404"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-396 MuiOutlinedInput-input-381"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-346 MuiBox-root-414"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-350 MuiFormControl-marginNormal-351 MuiTextField-root-349"
      >
        <label
          className="MuiFormLabel-root-366 MuiFormLabel-disabled-368 MuiInputLabel-disabled-356 MuiInputLabel-root-354 MuiInputLabel-formControl-360 MuiInputLabel-animated-363 MuiInputLabel-shrink-362"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-386 MuiOutlinedInput-root-373 MuiInputBase-disabled-389 MuiOutlinedInput-disabled-375 MuiInputBase-formControl-387"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-403 MuiOutlinedInput-notchedOutline-380"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-404"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-396 MuiOutlinedInput-input-381 MuiInputBase-disabled-389 MuiOutlinedInput-disabled-375"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-346 MuiBox-root-415"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-350 MuiFormControl-marginNormal-351 MuiTextField-root-349"
      >
        <label
          className="MuiFormLabel-root-366 MuiInputLabel-root-354 MuiInputLabel-formControl-360 MuiInputLabel-animated-363 MuiInputLabel-shrink-362"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-386 MuiOutlinedInput-root-373 MuiInputBase-formControl-387"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-403 MuiOutlinedInput-notchedOutline-380"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-404"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-396 MuiOutlinedInput-input-381"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-271 MuiFormControl-marginNormal-272 MuiTextField-root-270"
  >
    <label
      className="MuiFormLabel-root-287 MuiInputLabel-root-275 MuiInputLabel-formControl-281 MuiInputLabel-animated-284 MuiInputLabel-shrink-283"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-307 MuiOutlinedInput-root-294 MuiInputBase-formControl-308"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-324 MuiOutlinedInput-notchedOutline-301"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-325"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-317 MuiOutlinedInput-input-302"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-343 MuiButtonBase-disabled-344 MuiButton-root-326 MuiButton-contained-334 MuiButton-containedPrimary-335 MuiButton-disabled-338"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-327"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="makeStyles-root-75"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-80 MuiBox-root-81"
>
  <div
    className="MuiBox-root-80 MuiBox-root-82"
  >
    <h4
      className="MuiTypography-root-84 MuiTypography-h4-92 MuiTypography-colorPrimary-107 makeStyles-inline-83"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-84 MuiTypography-h4-92 makeStyles-inline-83"
    >

      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-80 MuiBox-root-114"
  >
    <h6
      className="MuiTypography-root-84 MuiTypography-h6-94"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-80 MuiBox-root-115"
  />
  <div
    className="MuiBox-root-80 MuiBox-root-116"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-117"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-122 MuiBox-root-123"
  >
    <label
      className="MuiFormControlLabel-root-124"
    >
      <span
        className="MuiSwitch-root-130"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-152 MuiIconButton-root-143 MuiPrivateSwitchBase-root-139 MuiSwitch-switchBase-133 MuiSwitch-colorPrimary-135"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-151"
          >
            <span
              className="MuiSwitch-icon-131"
            />
            <input
              className="MuiPrivateSwitchBase-input-142"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-186"
          />
        </span>
        <span
          className="MuiSwitch-bar-138"
        />
      </span>
      <span
        className="MuiTypography-root-155 MuiTypography-body1-157 MuiFormControlLabel-label-129"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-122 MuiBox-root-185"
  >
    <label
      className="MuiFormControlLabel-root-124"
    >
      <span
        className="MuiSwitch-root-130"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-152 MuiIconButton-root-143 MuiPrivateSwitchBase-root-139 MuiSwitch-switchBase-133 MuiSwitch-colorPrimary-135"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-151"
          >
            <span
              className="MuiSwitch-icon-131"
            />
            <input
              className="MuiPrivateSwitchBase-input-142"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-186"
          />
        </span>
        <span
          className="MuiSwitch-bar-138"
        />
      </span>
      <span
        className="MuiTypography-root-155 MuiTypography-body1-157 MuiFormControlLabel-label-129"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-196 MuiBox-root-197"
  >
    <div
      className="makeStyles-container-199"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-202"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-196 MuiBox-root-207"
  >
    <p
      className="MuiTypography-root-209 MuiTypography-body1-211 makeStyles-inline-208"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-199"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-202"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-240 MuiTypography-h4-248"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-240 MuiTypography-h5-249"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-h6-250"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-240 MuiTypography-body1-242"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-240 MuiTypography-body2-241"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle2-252"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle1-251 MuiTypography-colorPrimary-263"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle2-252 MuiTypography-colorPrimary-263 makeStyles-inline-239"
  >
    First part of the text.
  </h6>,
  <h6
    className="MuiTypography-root-240 MuiTypography-subtitle2-252 makeStyles-inline-239"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-416 MuiBox-root-417"
  id="/signup1"
>
  <div
    className="MuiBox-root-416 MuiBox-root-418"
  >
    <h4
      className="MuiTypography-root-420 MuiTypography-h4-428 MuiTypography-colorPrimary-443 makeStyles-inline-419"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-420 MuiTypography-h4-428 makeStyles-inline-419"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-416 MuiBox-root-450"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-416 MuiBox-root-451"
      >
        <div
          className="MuiFormControl-root-453 MuiFormControl-marginNormal-454 MuiFormControl-fullWidth-456 MuiTextField-root-452"
        >
          <label
            className="MuiFormLabel-root-469 MuiFormLabel-required-474 MuiInputLabel-required-461 MuiInputLabel-root-457 MuiInputLabel-formControl-463 MuiInputLabel-animated-466 MuiInputLabel-shrink-465"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-475 MuiInputLabel-asterisk-462"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-489 MuiOutlinedInput-root-476 MuiInputBase-fullWidth-498 MuiInputBase-formControl-490"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-506 MuiOutlinedInput-notchedOutline-483"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-507"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-499 MuiOutlinedInput-input-484"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-416 MuiBox-root-508"
      >
        <div
          className="MuiFormControl-root-453 MuiFormControl-marginNormal-454 MuiFormControl-fullWidth-456 MuiTextField-root-452"
        >
          <label
            className="MuiFormLabel-root-469 MuiFormLabel-required-474 MuiInputLabel-required-461 MuiInputLabel-root-457 MuiInputLabel-formControl-463 MuiInputLabel-animated-466 MuiInputLabel-shrink-465"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-475 MuiInputLabel-asterisk-462"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-489 MuiOutlinedInput-root-476 MuiInputBase-fullWidth-498 MuiInputBase-formControl-490"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-506 MuiOutlinedInput-notchedOutline-483"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-507"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-499 MuiOutlinedInput-input-484 MuiInputBase-inputType-502"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-416 MuiBox-root-509"
      >
        <div
          className="MuiFormControl-root-453 MuiFormControl-marginNormal-454 MuiFormControl-fullWidth-456 MuiTextField-root-452"
        >
          <label
            className="MuiFormLabel-root-469 MuiFormLabel-required-474 MuiInputLabel-required-461 MuiInputLabel-root-457 MuiInputLabel-formControl-463 MuiInputLabel-animated-466 MuiInputLabel-shrink-465"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-475 MuiInputLabel-asterisk-462"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-489 MuiOutlinedInput-root-476 MuiInputBase-fullWidth-498 MuiInputBase-formControl-490"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-506 MuiOutlinedInput-notchedOutline-483"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-507"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-499 MuiOutlinedInput-input-484 MuiInputBase-inputType-502"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-416 MuiBox-root-510"
      >
        <div
          className="MuiBox-root-416 MuiBox-root-511"
        >
          <button
            className="MuiButtonBase-root-529 MuiButton-root-512 MuiButton-text-514 MuiButton-textPrimary-515 MuiButton-fullWidth-528"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-513"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-540"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-416 MuiBox-root-532"
        >
          <button
            className="MuiButtonBase-root-529 MuiButtonBase-disabled-530 MuiButton-root-512 MuiButton-contained-520 MuiButton-containedPrimary-521 MuiButton-disabled-524 MuiButton-fullWidth-528"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-513"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-416 MuiBox-root-533"
  />
  <div
    className="MuiBox-root-416 MuiBox-root-534"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-535"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-550 MuiBox-root-551"
  id="/signup2"
>
  <div
    className="MuiBox-root-550 MuiBox-root-552"
  >
    <h4
      className="MuiTypography-root-554 MuiTypography-h4-562 MuiTypography-colorPrimary-577 makeStyles-inline-553"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-554 MuiTypography-h4-562 makeStyles-inline-553"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-550 MuiBox-root-584"
  >
    <div
      className="MuiBox-root-550 MuiBox-root-585"
    >
      <div
        className="MuiBox-root-550 MuiBox-root-586"
      >
        <div
          className="MuiBox-root-550 MuiBox-root-587"
        >
          <h6
            className="MuiTypography-root-554 MuiTypography-subtitle2-566 makeStyles-inline-553"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-589"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-592"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-597"
      >
        <span
          className="MuiSwitch-root-603"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-625 MuiIconButton-root-616 MuiPrivateSwitchBase-root-612 MuiSwitch-switchBase-606 MuiSwitch-colorPrimary-608"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-624"
            >
              <span
                className="MuiSwitch-icon-604"
              />
              <input
                className="MuiPrivateSwitchBase-input-615"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root-651"
            />
          </span>
          <span
            className="MuiSwitch-bar-611"
          />
        </span>
        <span
          className="MuiTypography-root-554 MuiTypography-body1-556 MuiFormControlLabel-label-602"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-550 MuiBox-root-628"
    >
      <p
        className="MuiTypography-root-554 MuiTypography-body1-556 makeStyles-inline-553"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-550 MuiBox-root-629"
    >
      <div
        className="MuiBox-root-550 MuiBox-root-630"
      >
        <button
          className="MuiButtonBase-root-625 MuiButton-root-631 MuiButton-text-633 MuiButton-textPrimary-634 MuiButton-fullWidth-647"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-632"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root-651"
          />
        </button>
      </div>
      <div
        className="MuiBox-root-550 MuiBox-root-648"
      >
        <button
          className="MuiButtonBase-root-625 MuiButton-root-631 MuiButton-contained-639 MuiButton-containedPrimary-640 MuiButton-fullWidth-647"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-632"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-651"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-550 MuiBox-root-649"
  />
  <div
    className="MuiBox-root-550 MuiBox-root-650"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-592"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-661 MuiBox-root-662"
  id="/signup3"
>
  <div
    className="MuiBox-root-661 MuiBox-root-663"
  >
    <h4
      className="MuiTypography-root-665 MuiTypography-h4-673 MuiTypography-colorPrimary-688 makeStyles-inline-664"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-665 MuiTypography-h4-673 makeStyles-inline-664"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-661 MuiBox-root-695"
  >
    <h6
      className="MuiTypography-root-665 MuiTypography-subtitle1-676 makeStyles-inline-664"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-661 MuiBox-root-696"
      >
        <div
          className="MuiFormControl-root-698 MuiFormControl-marginNormal-699 MuiFormControl-fullWidth-701 MuiTextField-root-697"
        >
          <div
            className="MuiInputBase-root-715 MuiOutlinedInput-root-702 MuiInputBase-fullWidth-724 MuiInputBase-formControl-716"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-732 MuiOutlinedInput-notchedOutline-709"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-733"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-725 MuiOutlinedInput-input-710"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-661 MuiBox-root-734"
      >
        <div
          className="MuiBox-root-661 MuiBox-root-735"
        >
          <button
            className="MuiButtonBase-root-753 MuiButton-root-736 MuiButton-text-738 MuiButton-textPrimary-739 MuiButton-fullWidth-752"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-737"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-764"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-661 MuiBox-root-756"
        >
          <button
            className="MuiButtonBase-root-753 MuiButton-root-736 MuiButton-contained-744 MuiButton-containedPrimary-745 MuiButton-fullWidth-752"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-737"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root-764"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-661 MuiBox-root-757"
  />
  <div
    className="MuiBox-root-661 MuiBox-root-758"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-759"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-774 MuiBox-root-775"
  id="/welcome"
>
  <div
    className="MuiBox-root-774 MuiBox-root-776"
  >
    <h4
      className="MuiTypography-root-778 MuiTypography-h4-786 MuiTypography-colorPrimary-801 makeStyles-inline-777"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-778 MuiTypography-h4-786 makeStyles-inline-777"
    >

      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-774 MuiBox-root-808"
  >
    <p
      className="MuiTypography-root-778 MuiTypography-body1-780 makeStyles-inline-777"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-774 MuiBox-root-809"
    />
    <button
      className="MuiButtonBase-root-827 MuiButton-root-810 MuiButton-contained-818 MuiButton-containedPrimary-819 MuiButton-fullWidth-826"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-811"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-839"
      />
    </button>
    <div
      className="MuiBox-root-774 MuiBox-root-830"
    />
    <button
      className="MuiButtonBase-root-827 MuiButton-root-810 MuiButton-contained-818 MuiButton-containedPrimary-819 MuiButton-fullWidth-826"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-811"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-839"
      />
    </button>
    <div
      className="MuiBox-root-774 MuiBox-root-831"
    />
    <button
      className="MuiButtonBase-root-827 MuiButton-root-810 MuiButton-contained-818 MuiButton-containedPrimary-819 MuiButton-fullWidth-826"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-811"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-839"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-774 MuiBox-root-832"
  />
  <div
    className="MuiBox-root-774 MuiBox-root-833"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-834"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
